--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h1 id="text">Index</h1>
 <button onclick="location.href = 'http://localhost:5000/forums';">Forums</button>
 <form action="/forums" method="POST">
-    <button type="submit">Create Forum</button>
+    <button name="index" type="submit">Create Forum</button>
 </form>
 <script>
     function change(){
