--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,6 @@
 <head>
 </head>
 <body>
-<h1 id="text">Index</h1>
-<button onclick="location.href = 'http://localhost:5000/forums';">Forums</button>
-<form action="/forums" method="POST">
-    <button name="index" type="submit">Create Forum</button>
-</form>
-<script>
-    function change(){
-        document.getElementById("text").innerHTML = "click";
-    }
-</script>
+<h1>Welcome, please test using the command line tool curl</h1>
 </body>
-
 </html>
